<resources>
    <string name="app_name">MadLevel5Task2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="til_title">Title</string>
    <string name="til_platform">Platform</string>
    <string name="til_day">Day</string>
    <string name="tilMonth">Month</string>
    <string name="til_year">Year</string>
    <string name="tv_game_title">Title</string>
    <string name="tv_game_platform">Platform</string>
    <string name="tv_date">Date</string>
    />
</resources>