<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/llGameVertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvGameTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_game_title"
            android:textSize="30sp" />

        <LinearLayout
            android:id="@+id/llGameHorizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvGamePlatform"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv_game_platform"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv_date"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>